# bizerror

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  cliff.toml
.github/workflows/: coverage.yml
benches/: error_performance.rs
docs/: BEST_PRACTICES.md  EXTENDED_FEATURES.md  USAGE_GUIDE.md
examples/: bizerror_demo.rs  new_design_demo.rs  real_world_usage.rs  simple.rs
examples/simple/: main.rs
impl/: Cargo.toml
impl/src/: expand.rs  lib.rs
src/: lib.rs
tests/: bizerror_tests.rs  it_should_be_like.rs  macro_test.rs  new_design_test.rs  test_attribute_macro.rs
