[package]
name = "bizerror-impl"
version = "0.1.1"
edition = "2024"
authors = ["Jasper Zhang <hanjie.zhang1228@gmail.com>"]
license = "MIT OR Apache-2.0"
exclude = [".github", "CHANGELOG.md"]
repository = "https://github.com/vainjoker/bizerror"
homepage = "https://github.com/vainjoker/bizerror"
description = "Implementation details for bizerror derive macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.87"